# inverse_design_helpers

./: LICENSE  README.md  pyproject.toml
inverse_design_helpers/autograd/: differential_operators.py
inverse_design_helpers/autograd/scipy/: linalg.py  ndimage.py
tests/: conftest.py
tests/autograd/: test_differential_operators.py
tests/autograd/scipy/: test_ndimage.py
