[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "inverse_design_helpers"
authors = [{ name = "Yannick Augenstein" }]
description = "A collection of utilities for inverse design."
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "autograd"]

[project.optional-dependencies]
test = ["pytest", "pytest-xdist", "pytest-cov"]

[project.urls]
Source = "https://github.com/mrbaozi/inverse_design_helpers"

[tool.pytest.ini_options]
addopts = "-n 4 --cov=inverse_design_helpers --cov-report term-missing"
xfail_strict = true
